--- a/src/components/Content/Content.module.scss
+++ b/src/components/Content/Content.module.scss
@@ -1,14 +1,23 @@
 .content {
+  max-width: 1200px;
+  margin: 0 auto;
+  width: 100%;
   padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
   .header_block {
     display: flex;
     gap: 0.5rem;
+    min-width: 100%;
   }
 }
 
 button {
   background: rgba(175, 203, 240, 0.45);
   border: 1px solid #afcbf0;
+  width: 80px;
+  height: 36px;
   border-radius: 30px;
   cursor: pointer;
   min-width: 5rem;
