--- a/src/components/ToDoList/ToDoList.module.scss
+++ b/src/components/ToDoList/ToDoList.module.scss
@@ -1,4 +1,5 @@
 .todoList {
+  margin-top: 0.5rem;
   min-width: 50%;
   display: flex;
   flex-direction: column;
@@ -8,8 +9,16 @@
 .item {
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  background: rgba(239, 234, 225, 0.2);
+  border: 1px solid #efeae1;
+  border-radius: 10px;
+  padding: 0.5rem;
   .btn_block {
     display: flex;
     gap: 0.5rem;
+  }
+  p {
+    background-color: white;
   }
 }
