--- a/src/components/Content/Content.module.scss
+++ b/src/components/Content/Content.module.scss
@@ -22,11 +22,15 @@ button {
   cursor: pointer;
   min-width: 5rem;
   transition: all 0.2s;
-
   &:hover {
     background: rgba(175, 203, 240, 0.45);
     border: 1px solid #afcbf0;
     border-radius: 30px;
     box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
+  }
+  &:disabled {
+    background: rgba(175, 203, 240, 0.2);
+    border: 1px solid #afcbf0;
+    border-radius: 30px;
   }
 }
