--- a/src/components/ToDoList/ToDoList.module.scss
+++ b/src/components/ToDoList/ToDoList.module.scss
@@ -18,7 +18,23 @@
     display: flex;
     gap: 0.5rem;
   }
+
   p {
     background-color: white;
+    margin: 0;
+    &.ready {
+      position: relative;
+      text-decoration: line-through;
+      &:before {
+        content: "";
+        color: red;
+        border-bottom: 2px solid red;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 50%;
+      }
+    }
   }
 }
