--- a/src/components/ToDoList/ToDoList.module.scss
+++ b/src/components/ToDoList/ToDoList.module.scss
@@ -14,27 +14,16 @@
   border: 1px solid #efeae1;
   border-radius: 10px;
   padding: 0.5rem;
+  gap: 0.5rem;
+  .text {
+    display: flex;
+  }
   .btn_block {
     display: flex;
     gap: 0.5rem;
   }
 
-  p {
-    background-color: white;
-    margin: 0;
-    &.ready {
-      position: relative;
-      text-decoration: line-through;
-      &:before {
-        content: "";
-        color: red;
-        border-bottom: 2px solid red;
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 50%;
-      }
-    }
+  span {
+    background-color: #d3f0e1;
   }
 }
