feat: rewritten to typescript

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -5,5 +5,5 @@
   padding: 0.5rem;
   justify-content: center;
   background: rgba(239, 234, 225, 0.2);
-  border: 1px solid #efeae1;
+  border: 0.1rem solid #efeae1;
 }
