--- a/src/components/Content/Content.module.scss
+++ b/src/components/Content/Content.module.scss
@@ -1,17 +1,19 @@
-.content {
-  max-width: 1200px;
-  margin: 0 auto;
-  width: 100%;
-  padding: 1rem;
-  display: flex;
-  flex-direction: column;
-  gap: 0.5rem;
-  .header_block {
+.wrapper {
+  .content {
+    max-width: 1200px;
+    margin: 0 auto;
+    width: 100%;
+    padding: 1rem;
     display: flex;
+    flex-direction: column;
     gap: 0.5rem;
-    min-width: 100%;
-    input {
-      width: 70%;
+    .header_block {
+      display: flex;
+      gap: 0.5rem;
+      min-width: 100%;
+      .input {
+        width: 70%;
+      }
     }
   }
 }
@@ -19,21 +21,20 @@
 button {
   background: rgba(175, 203, 240, 0.45);
   border: 1px solid #afcbf0;
-  min-width: 20px;
-  height: 36px;
-  border-radius: 30px;
+  height: 2.5rem;
+  border-radius: 2rem;
   cursor: pointer;
-  min-width: 5rem;
+  min-width: 4rem;
   transition: all 0.2s;
   &:hover {
     background: rgba(175, 203, 240, 0.45);
     border: 1px solid #afcbf0;
-    border-radius: 30px;
-    box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 2rem;
+    box-shadow: inset 0 0.2rem 0.2rem rgba(0, 0, 0, 0.25);
   }
   &:disabled {
     background: rgba(175, 203, 240, 0.2);
     border: 1px solid #afcbf0;
-    border-radius: 30px;
+    border-radius: 2rem;
   }
 }
