--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -6,5 +6,5 @@
   justify-content: center;
   margin-top: auto;
   background: rgba(239, 234, 225, 0.2);
-  border: 1px solid #efeae1;
+  border: 0.1rem solid #efeae1;
 }
